tests/ui/imports/overwrite-different-ambig-2.stderr
error: `S` is ambiguous
  --> $DIR/overwrite-different-ambig-2.rs:22:20
   |
LL |     let _: m1::S = S {};
   |                    ^ ambiguous name
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #114095 <https://github.com/rust-lang/rust/issues/114095>
   = note: ambiguous because of multiple glob imports of a name in the same module
note: `S` could refer to the struct imported here
  --> $DIR/overwrite-different-ambig-2.rs:18:5
   |
LL | use m1::*;
   |     ^^^^^
   = help: consider adding an explicit import of `S` to disambiguate
note: `S` could also refer to the struct imported here
  --> $DIR/overwrite-different-ambig-2.rs:19:5
   |
LL | use m2::*;
   |     ^^^^^
   = help: consider adding an explicit import of `S` to disambiguate
   = note: `#[deny(ambiguous_glob_imports)]` (part of `#[deny(future_incompatible)]`) on by default

error: aborting due to 1 previous error

Future incompatibility report: Future breakage diagnostic:
error: `S` is ambiguous
  --> $DIR/overwrite-different-ambig-2.rs:22:20
   |
LL |     let _: m1::S = S {};
   |                    ^ ambiguous name
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #114095 <https://github.com/rust-lang/rust/issues/114095>
   = note: ambiguous because of multiple glob imports of a name in the same module
note: `S` could refer to the struct imported here
  --> $DIR/overwrite-different-ambig-2.rs:18:5
   |
LL | use m1::*;
   |     ^^^^^
   = help: consider adding an explicit import of `S` to disambiguate
note: `S` could also refer to the struct imported here
  --> $DIR/overwrite-different-ambig-2.rs:19:5
   |
LL | use m2::*;
   |     ^^^^^
   = help: consider adding an explicit import of `S` to disambiguate
   = note: `#[deny(ambiguous_glob_imports)]` (part of `#[deny(future_incompatible)]`) on by default

